--- a/src/style/additional/_mixins.scss
+++ b/src/style/additional/_mixins.scss
@@ -12,3 +12,14 @@
     text-transform: capitalize;
     margin: 0;
 }
+
+@mixin learn-serbian-button {
+    color: white;
+    font-family: learn-serbian-medium;
+    font-size: set-size(lg);
+    background-color: $blue;
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+    padding: 15px;
+}
