--- a/src/style/additional/_mixins.scss
+++ b/src/style/additional/_mixins.scss
@@ -18,8 +18,14 @@
     font-family: learn-serbian-medium;
     font-size: set-size(lg);
     background-color: $blue;
-    border: none;
+    border: 1px solid transparent;
     border-radius: 15px;
     cursor: pointer;
     padding: 15px;
+    transition: 300ms;
+
+    &:hover {
+        background-color: $purple;
+        border: 1px solid white;
+    }
 }
