--- a/src/style/main.css
+++ b/src/style/main.css
@@ -446,6 +446,11 @@ footer .footer-copyright span {
   align-items: flex-start;
   margin-top: 150px;
 }
+#lessons .lessons-holder .lessons-tree-holder #lessons-tree-no-lessons {
+  color: white;
+  font-size: 40px;
+  text-align: center;
+}
 #lessons .lessons-holder .lessons-tree {
   display: flex;
   align-items: center;
@@ -488,6 +493,7 @@ footer .footer-copyright span {
 #lessons .lessons-holder .lessons-tree .lessons-tree-node-holder .lessons-tree-node-active {
   height: 210px;
   width: 210px;
+  cursor: default;
 }
 #lessons .lessons-holder .lessons-tree .lessons-tree-node-holder .lessons-tree-node-active .lessons-tree-node-block-1 {
   height: 210px;
